--- a/css/index.css
+++ b/css/index.css
@@ -242,6 +242,7 @@ body {
     box-sizing: border-box;
     border-radius: 24px;
 }
+
 .text-copy {
     position: static;
     width: 288px;
@@ -259,4 +260,22 @@ body {
     order: 0;
     flex-grow: 1;
     margin: 0px 8px;
+}
+
+#final-text {
+    position: absolute;
+    width: 336px;
+    height: 700px;
+    left: 30px;
+    top: 50px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    color: #495057;
+    border: none;
+    resize: none;
+    outline: none;
+    background: none;
 }
